| Summary: | ASTERISK-30486: app_queue: Fix minor xmldoc issues | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2023-04-03 09:12:50 | Date Closed: | 2023-04-10 11:01:53 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 20.2.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fixes some minor XML documentation issues with the d and F options. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2023-04-03 09:12:53.530-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2023-04-10 11:01:54.736-0500 Change 20032 merged by Friendly Automation: app_queue: Fix minor xmldoc duplication and vagueness. [https://gerrit.asterisk.org/c/asterisk/+/20032|https://gerrit.asterisk.org/c/asterisk/+/20032] By: Friendly Automation (friendly-automation) 2023-04-10 11:03:05.160-0500 Change 20044 merged by Friendly Automation: app_queue: Fix minor xmldoc duplication and vagueness. [https://gerrit.asterisk.org/c/asterisk/+/20044|https://gerrit.asterisk.org/c/asterisk/+/20044] By: Friendly Automation (friendly-automation) 2023-04-10 11:04:15.220-0500 Change 20043 merged by Friendly Automation: app_queue: Fix minor xmldoc duplication and vagueness. [https://gerrit.asterisk.org/c/asterisk/+/20043|https://gerrit.asterisk.org/c/asterisk/+/20043] | ||